Renamed theme: Talking New York

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*  
-Theme Name: Aperture
-Version: 2.0
-Description: Designed by <a href="http://www.markforrester.co.za">Mark Forrester</a>.
+Theme Name: Talking New York
+Version: 1.0
+Description: A customized version of WooThemes' Aperture
 Author: WooThemes
 Author URI: http://www.woothemes.com
 */
